--- a/index.html
+++ b/index.html
@@ -22,7 +22,38 @@
 </head>
 <body>
     <header>
-      <nav></nav>
+      <!-- navbar -->
+        <div class="navbar" style="width: 1400px;height: 100px;border-radius: 500px;background-color: salmon;">
+          <div class="navbar-start">
+            <ul class="menu menu-horizontal lg:menu-horizontal">
+              <li><a>Home</a></li>
+              <li><a>About Us</a></li>
+              <li><a>Shop</a></li>
+              <li><a>All Fruits</a></li>
+            </ul>
+          </div>
+          <div class="navbar-center">
+            <img src="images/logo.png" alt="">
+            <h1>Fruit Burst</h1>
+          </div>
+          <div class="navbar-end">
+            <div class="form-control">
+              <input type="text" placeholder="Search here" class="input input-bordered w-24 md:w-auto" style="width: 350px;height: 50px; border-radius: 100px;">
+            </div>
+          </div>
+          <div class="dropdown">
+            <label tabindex="0" class="btn btn-ghost btn-circle lg:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
+            </label>
+            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+              <li><a>Home</a></li>
+              <li><a>About Us</a></li>
+              <li><a>Shop</a></li>
+              <li><a>All Fruits</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
       <!-- banner1 -->
       <section>
         <div class="carousel w-full">
@@ -62,29 +93,94 @@
     </header>
     <main>
       <!-- banner2 -->
-      <section>
-        <h1 style="color: #121212; font-weight: 800;">Deal of the day</h1>
-        <p style="color: rgba(18, 18, 18, 0.60); font-weight: 500;">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+      <section style=" width: 1300px; height: 700px;">
+        <div class="flex">
+          <div>
+            <h1 style="color: #121212; font-weight: 800;">Deal of the day</h1>
+            <p style="color: rgba(18, 18, 18, 0.60); font-weight: 500;">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+          </div>
+          <div>
+            
+          <div class="flex items-center gap-7">
+            <h1 style="color: #121212; font-weight: 800;">29</h1>
+            <img style="width: 20px;height: 18px;" src="images/Frame.jpg" alt="">
+            <h1 style="color: #121212; font-weight: 800;">15</h1>
+            <img style="width: 20px;height: 18px;" src="images/Frame.jpg" alt="">
+            <h1 style="color: #121212; font-weight: 800;">25</h1>
+            <img style="width: 20px;height: 18px;" src="images/Frame.jpg" alt="">
+            <h1 style="color: #121212; font-weight: 800;">08</h1>
+          </div>
+          <div class="flex items-center gap-12" style="color: rgba(18, 18, 18, 0.60); font-weight: 500;">
+            <h3>Days</h3>
+            <h3>Hours</h3>
+            <h3>Minutes</h3>
+            <h3>Seconds</h3>
+          </div>
+          </div>
+        </div>
+        <button  class="btn btn-error" style="height: 50px;width: 100px;">Shop All</button>
       </section>
       <!-- banner3 -->
       <section>
-        <div class="hero min-h-screen" style="background-image: url(./images/team.png);">
-          <div class="hero-overlay bg-opacity-60"></div>
-          <div class="hero-content text-center text-neutral-content">
-            <div class="max-w-md">
+        <div class="hero min-h-screen" style="background-image: url(./images/team.png); width: 1300px; height: 500px; margin-left: 110px;">
+          <div class="hero-overlay bg-opacity-70"></div>
+          <div class="hero-content text-neutral-content">
+            <div class="max-w-md text-center ">
               <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
               <p class="mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+              <div class="grid grid-cols-4 gap-9 w-45 h-40">
+                <div>
+                  <img src="images/member1.png" alt="">
+                  <h2>Awlad Hossain</h2>
+                  <p>Fruits Expert</p>
+                  <div class="flex gap-2">
+                    <img style="width: 20px; height: 20px; border-radius: 9px;" src="images/facebook 1.jpg" alt="">
+                    <img style="width: 21px; height: 21px; border-radius: 9px;background-color: white;" src="images/twitter.svg" alt="">
+                    <img style="width: 21px; height: 21px; border-radius: 9px;background-color: white; " src="images/linkedin-in.svg" alt="">
+                  </div>
+                </div>
+                <div>
+                  <img src="images/member2.png" alt="">
+                  <h2>Safia Chowdhury</h2>
+                  <p>Fruits Expert</p>
+                  <div class="flex gap-2">
+                    <img style="width: 20px; height: 20px; border-radius: 9px;" src="images/facebook 1.jpg" alt="">
+                    <img style="width: 21px; height: 21px; border-radius: 9px;background-color: white;" src="images/twitter.svg" alt="">
+                    <img style="width: 21px; height: 21px; border-radius: 9px;background-color: white; " src="images/linkedin-in.svg" alt="">
+                  </div>
+                </div>
+                <div>
+                  <img src="images/member3.png" alt="">
+                  <h2>Rokib Hossain</h2>
+                  <p>Fruits Expert</p>
+                  <div class="flex gap-2">
+                    <img style="width: 20px; height: 20px; border-radius: 9px;" src="images/facebook 1.jpg" alt="">
+                    <img style="width: 21px; height: 21px; border-radius: 9px;background-color: white;" src="images/twitter.svg" alt="">
+                    <img style="width: 21px; height: 21px; border-radius: 9px;background-color: white; " src="images/linkedin-in.svg" alt="">
+                  </div>
+                </div>
+                <div>
+                  <img src="images/member4.png" alt="">
+                  <h2>Chaity</h2>
+                  <p>Fruits Expert</p>
+                  <div class="flex gap-2">
+                    <img style="width: 20px; height: 20px; border-radius: 9px;" src="images/facebook 1.jpg" alt="">
+                    <img style="width: 21px; height: 21px; border-radius: 9px;background-color: white;" src="images/twitter.svg" alt="">
+                    <img style="width: 21px; height: 21px; border-radius: 9px; background-color: white; " src="images/linkedin-in.svg" alt="">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer class="footer footer-center p-10 bg-base-200 text-base-content rounded">
+    <footer class="footer footer-center p-10 bg-base-content text-base-content rounded">
       <div class="flex items-center">
         <img src="images/logo.png" alt="">
-        <h1>Fruit Burst</h1>
+        <h1 style="color: #FFF;">Fruit Burst</h1>
       </div>
-      <div class="grid grid-flow-col gap-4">
+      <div class="grid grid-flow-col gap-10" style="color: #FFF;">
          <a href="">Home</a>
         <a href="">About us</a> 
         <a href="">Shop</a> 
@@ -93,9 +189,9 @@
         <a href="">My Account</a>
       </div> 
         <div class="grid grid-flow-col gap-4">
-          <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg></a> 
-          <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a> 
-          <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
+          <img style="width: 40px; height: 40px;border-radius: 18px;" src="images/facebook 1.jpg" alt="">
+          <img style="width: 40px; height: 40px;border-radius: 18px;" src="images/Group 49.jpg" alt="">
+          <img style="width: 43px; height: 43px;border-radius: 18px;" src="images/Apple.png" alt="">
         </div>
     </footer>
     
