--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <header>
       <!-- navbar -->
-        <div class="navbar" style="width: 1400px;height: 100px;border-radius: 500px;background-color: salmon;">
+        <div class="navbar" style="width: 1400px;height: 100px;border-radius: 500px;background-color: salmon; color: #FFF;">
           <div class="navbar-start">
             <ul class="menu menu-horizontal lg:menu-horizontal">
               <li><a>Home</a></li>
@@ -34,7 +34,7 @@
           </div>
           <div class="navbar-center">
             <img src="images/logo.png" alt="">
-            <h1>Fruit Burst</h1>
+            <h1 class="text-3xl">Fruit Burst</h1>
           </div>
           <div class="navbar-end">
             <div class="form-control">
@@ -55,41 +55,78 @@
         </div>
       </nav>
       <!-- banner1 -->
-      <section>
-        <div class="carousel w-full">
-          <div id="slide1" class="carousel-item relative">
-           <div>
-            <h1>Exotic tastes at your doorstep</h1>
-            <img src="/images/banner1.png" class="w-full" />
-           </div>
-            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-              <a href="#slide4" class="btn btn-circle">❮</a> 
-              <a href="#slide2" class="btn btn-circle">❯</a>
-            </div>
-          </div> 
-          <div id="slide2" class="carousel-item relative">
-            <img src="/images/banner2.png" class="w-full" />
-            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-              <a href="#slide1" class="btn btn-circle">❮</a> 
-              <a href="#slide3" class="btn btn-circle">❯</a>
-            </div>
-          </div> 
-          <div id="slide3" class="carousel-item relative">
-            <img src="/images/banner3.png" class="w-full" />
-            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-              <a href="#slide2" class="btn btn-circle">❮</a> 
-              <a href="#slide4" class="btn btn-circle">❯</a>
-            </div>
-          </div> 
-          <div id="slide4" class="carousel-item relative">
-            <img src="/images/banner4.png" class="w-full" />
-            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-              <a href="#slide3" class="btn btn-circle">❮</a> 
-              <a href="#slide1" class="btn btn-circle">❯</a>
+    <section>
+      <div class="carousel w-full">
+        <!-- slider1 -->
+        <div id="slide1" class="carousel-item relative w-full">
+          <div class="hero min-h-screen" style="background-image: url(./images/banner1.png);">
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-content text-center text-neutral-content">
+              <div class="max-w-md">
+                <h1 class="mb-5 text-4xl font-bold">Exotic tastes at your <br> doorstep</h1>
+                <p class="mb-5">We supply highly quality organic products</p>
+                <button class="btn btn-error" style="color: #FFF;">Shop Now</button>
+              </div>
             </div>
           </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide4" class="btn btn-circle">❮</a> 
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div> 
+        <!-- slider2 -->
+        <div id="slide2" class="carousel-item relative w-full">
+          <div class="hero min-h-screen" style="background-image: url(./images/banner2.png);">
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-content text-center text-neutral-content">
+              <div class="max-w-md">
+                <h1 class="mb-5 text-4xl font-bold">Exotic tastes at your <br> doorstep</h1>
+                <p class="mb-5">We supply highly quality organic products</p>
+                <button class="btn btn-error" style="color: #FFF;">Shop Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide1" class="btn btn-circle">❮</a> 
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div> 
+        <!-- slider3 -->
+        <div id="slide3" class="carousel-item relative w-full">
+          <div class="hero min-h-screen" style="background-image: url(./images/banner3.png);">
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-content text-center text-neutral-content">
+              <div class="max-w-md">
+                <h1 class="mb-5 text-4xl font-bold">Exotic tastes at your <br> doorstep</h1>
+                <p class="mb-5">We supply highly quality organic products</p>
+                <button class="btn btn-error" style="color: #FFF;">Shop Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide2" class="btn btn-circle">❮</a> 
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div> 
+        <!-- slider4 -->
+        <div id="slide4" class="carousel-item relative w-full">
+          <div class="hero min-h-screen" style="background-image: url(./images/banner4.png);">
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-content text-center text-neutral-content">
+              <div class="max-w-md">
+                <h1 class="mb-5 text-4xl font-bold">Exotic tastes at your <br> doorstep</h1>
+                <p class="mb-5">We supply highly quality organic products</p>
+                <button class="btn btn-error" style="color: #FFF;">Shop Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide3" class="btn btn-circle">❮</a> 
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
         </div>
-      </section>
+      </div>
+    </section>
     </header>
     <main>
       <!-- banner2 -->
@@ -125,45 +162,45 @@
         <div class="hero min-h-screen" style="background-image: url(./images/team.png); width: 1300px; height: 500px; margin-left: 110px;">
           <div class="hero-overlay bg-opacity-70"></div>
           <div class="hero-content text-neutral-content">
-            <div class="max-w-md text-center ">
-              <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
-              <p class="mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-              <div class="grid grid-cols-4 gap-9 w-45 h-40">
+            <div class="text-center ">
+              <h1 class="mb-5 text-4xl font-bold" style="margin-top: 10px;">Meet the team section</h1>
+              <p class="text-l">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+              <div class="grid  grid-cols-4 gap-9" style="margin-top: 35px;">
                 <div>
-                  <img src="images/member1.png" alt="">
-                  <h2>Awlad Hossain</h2>
+                  <img style="width: 90px;height: 90px;border-radius: 90px;" src="images/member1.png" alt="">
+                  <h2 class="text-xl">Awlad Hossain</h2>
                   <p>Fruits Expert</p>
-                  <div class="flex gap-2">
+                  <div class="flex gap-3">
+                    <img style="width: 22px; height: 22px; border-radius: 9px;" src="images/facebook 1.jpg" alt="">
+                    <img style="width: 22px; height: 22px; border-radius: 9px;background-color: white;" src="images/twitter.svg" alt="">
+                    <img style="width: 22px; height: 22px; border-radius: 9px;background-color: white; " src="images/linkedin-in.svg" alt="">
+                  </div>
+                </div>
+                <div>
+                  <img style="width: 90px;height: 90px;border-radius: 90px;" src="images/member2.png" alt="">
+                  <h2 class="text-xl">Safia Chowdhury</h2>
+                  <p>Fruits Expert</p>
+                  <div class="flex gap-3">
                     <img style="width: 20px; height: 20px; border-radius: 9px;" src="images/facebook 1.jpg" alt="">
                     <img style="width: 21px; height: 21px; border-radius: 9px;background-color: white;" src="images/twitter.svg" alt="">
                     <img style="width: 21px; height: 21px; border-radius: 9px;background-color: white; " src="images/linkedin-in.svg" alt="">
                   </div>
                 </div>
                 <div>
-                  <img src="images/member2.png" alt="">
-                  <h2>Safia Chowdhury</h2>
+                  <img style="width: 90px;height: 90px;border-radius: 90px;" src="images/member3.png" alt="">
+                  <h2 class="text-xl">Rokib Hossain</h2>
                   <p>Fruits Expert</p>
-                  <div class="flex gap-2">
+                  <div class="flex gap-3">
                     <img style="width: 20px; height: 20px; border-radius: 9px;" src="images/facebook 1.jpg" alt="">
                     <img style="width: 21px; height: 21px; border-radius: 9px;background-color: white;" src="images/twitter.svg" alt="">
                     <img style="width: 21px; height: 21px; border-radius: 9px;background-color: white; " src="images/linkedin-in.svg" alt="">
                   </div>
                 </div>
                 <div>
-                  <img src="images/member3.png" alt="">
-                  <h2>Rokib Hossain</h2>
+                  <img style="width: 90px;height: 90px;border-radius: 90px;" src="images/member4.png" alt="">
+                  <h2 class="text-xl">Chaity</h2>
                   <p>Fruits Expert</p>
-                  <div class="flex gap-2">
-                    <img style="width: 20px; height: 20px; border-radius: 9px;" src="images/facebook 1.jpg" alt="">
-                    <img style="width: 21px; height: 21px; border-radius: 9px;background-color: white;" src="images/twitter.svg" alt="">
-                    <img style="width: 21px; height: 21px; border-radius: 9px;background-color: white; " src="images/linkedin-in.svg" alt="">
-                  </div>
-                </div>
-                <div>
-                  <img src="images/member4.png" alt="">
-                  <h2>Chaity</h2>
-                  <p>Fruits Expert</p>
-                  <div class="flex gap-2">
+                  <div class="flex gap-3">
                     <img style="width: 20px; height: 20px; border-radius: 9px;" src="images/facebook 1.jpg" alt="">
                     <img style="width: 21px; height: 21px; border-radius: 9px;background-color: white;" src="images/twitter.svg" alt="">
                     <img style="width: 21px; height: 21px; border-radius: 9px; background-color: white; " src="images/linkedin-in.svg" alt="">
@@ -178,9 +215,9 @@
     <footer class="footer footer-center p-10 bg-base-content text-base-content rounded">
       <div class="flex items-center">
         <img src="images/logo.png" alt="">
-        <h1 style="color: #FFF;">Fruit Burst</h1>
+        <h1 style="color: #FFF;font-weight: 700;">Fruit Burst</h1>
       </div>
-      <div class="grid grid-flow-col gap-10" style="color: #FFF;">
+      <div class="grid grid-flow-col gap-10" style="font-weight: 600;color: #FFF;">
          <a href="">Home</a>
         <a href="">About us</a> 
         <a href="">Shop</a> 
