added the overflown div

--- a/index.html
+++ b/index.html
@@ -126,6 +126,29 @@
           </div>
         </div>
       </div>
+        <div class="grid grid-cols-5 ml-20 mr-30" style="margin-top: -70px;position: relative; background-color: white;justify-content: space-between;width: 1200px;">
+          <div>
+            <img src="images/fruit1.png" alt="">
+            <h2>Grapes</h2>
+          </div>
+          <div>
+            <img src="images/fruit2.png" alt="">
+            <h2>Orange</h2>
+          </div>
+          <div>
+            <img src="images/fruit3.png" alt="">
+            <h2>Mango</h2>
+          </div>
+          <div>
+            <img src="images/fruit4.png" alt="">
+            <h2>Strawberry</h2>
+          </div>
+          <div>
+            <img src="images/fruit5.png" alt="">
+            <h2>Promagranate</h2>
+          </div>
+        </div>
+      
     </section>
     </header>
     <main>
@@ -133,7 +156,7 @@
       <section style=" width: 1400px; height: 600px;">
         <div style="display: flex;">
           <div>
-            <h1 class="text-3xl font-bold" style="color: #121212;">Deal of the day</h1>
+            <h1 class="text-3xl font-bold" style="color: #121212; margin-top: 25px;">Deal of the day</h1>
             <p class="text-lg" style="color: rgba(18, 18, 18, 0.60);">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
           </div>
             
