--- a/index.html
+++ b/index.html
@@ -187,14 +187,15 @@
             <div class="card-body items-center text-center">
               <h2 class="card-title">12.90$ - 18.85$</h2>
               <p>Apples</p>
-             <button class="btn" onclick="my_modal_4.showModal()">Details</button>
-            <dialog id="my_modal_4" class="modal">
-            <form method="dialog" class="modal-box w-11/12 max-w-5xl">
-     <img src="images/fruit6.png" alt="">
+              <!-- Open the modal using ID.showModal() method -->
+<button class="btn" onclick="my_modal_5.showModal()">Details</button>
+<dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+  <form method="dialog" class="modal-box">
     <h3 class="font-bold text-lg">Apples</h3>
-    <p class="py-4"></p>
+    <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
     <div class="modal-action">
-      <button class="btn" style="color: salmon;border: 1px solid salmon;">Close</button>
+      <!-- if there is a button in form, it will close the modal -->
+      <button class="btn" style="color: salmon;background-color: #FFF;border: 1px solid salmon;">Close</button>
       <button class="btn btn-error">Shop Now</button>
     </div>
   </form>
@@ -209,18 +210,6 @@
             <div class="card-body items-center text-center">
               <h2 class="card-title">12.90$ - 18.85$</h2>
               <p>Orange</p>
-              <button class="btn" onclick="my_modal_4.showModal()">Details</button>
-<dialog id="my_modal_4" class="modal">
-  <form method="dialog" class="modal-box w-11/12 max-w-5xl">
-     <img src="images/fruit7.png" alt="">
-    <h3 class="font-bold text-lg">Orange</h3>
-    <p class="py-4"></p>
-    <div class="modal-action">
-      <button class="btn" style="color: salmon;border: 1px solid salmon;">Close</button>
-      <button class="btn btn-error">Shop Now</button>
-    </div>
-  </form>
-</dialog>
             </div>
          </div>
          <!-- card3 -->
@@ -231,18 +220,6 @@
             <div class="card-body items-center text-center">
               <h2 class="card-title">12.90$ - 18.85$</h2>
               <p>Red Dragon</p>
-              <button class="btn" onclick="my_modal_4.showModal()">Details</button>
-<dialog id="my_modal_4" class="modal">
-  <form method="dialog" class="modal-box w-11/12 max-w-5xl">
-     <img src="images/fruit8.png" alt="">
-    <h3 class="font-bold text-lg">Red Dragon</h3>
-    <p class="py-4"></p>
-    <div class="modal-action">
-      <button class="btn" style="color: salmon;border: 1px solid salmon;">Close</button>
-      <button class="btn btn-error">Shop Now</button>
-    </div>
-  </form>
-</dialog>
                
               </div>
             </div>
@@ -254,18 +231,6 @@
             <div class="card-body items-center text-center">
               <h2 class="card-title">12.90$ - 18.85$</h2>
               <p>Banana</p>
-              <button class="btn" onclick="my_modal_4.showModal()">Details</button>
-              <dialog id="my_modal_4" class="modal">
-                <form method="dialog" class="modal-box w-11/12 max-w-5xl">
-                   <img src="images/fruit8.png" alt="">
-                  <h3 class="font-bold text-lg">Red Dragon</h3>
-                  <p class="py-4"></p>
-                  <div class="modal-action">
-                    <button class="btn" style="color: salmon;border: 1px solid salmon;">Close</button>
-                    <button class="btn btn-error">Shop Now</button>
-                  </div>
-                </form>
-              </dialog>
 </div>
 </div>
         <div>
@@ -326,8 +291,7 @@
           </div>
         </div>
       </section>
-    </main>
-    <!-- bonus section -->
+       <!-- bonus section -->
     <section style="margin: 15px 95px 15px 95px;">
       <div style="text-align: center;">
         <h1 class="text-4xl">Why Choose Us</h1>
@@ -335,39 +299,69 @@
       </div>
       <div class="grid grid-cols-3">
       <div style="text-align: left;margin-top: 50px;">
+       <div style="display: flex; align-items: center;column-gap: 15px;">
+        <div>
+          <img src="images/group 1.jpg" alt="">
+        </div>
         <div>
           <h2 class="text-2xl">Dedicated Team</h2>
           <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
         </div>
-        <div>
-          <h2 class="text-2xl">Fresh is Best</h2>
-          <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+       </div>
+        <div style="display: flex;align-items: center;column-gap: 15px;">
+          <div>
+            <img src="images/love 1.jpg" alt="">
+          </div>
+          <div>
+            <h2 class="text-2xl">Fresh is Best</h2>
+            <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+          </div>
         </div>
-        <div>
-          <h2 class="text-2xl">Gift Certificates</h2>
-          <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+        <div style="display: flex;align-items: center;column-gap: 15px;">
+          <div>
+            <img src="images/gift-box 1.jpg" alt="">
+          </div>
+          <div>
+            <h2 class="text-2xl">Gift Certificates</h2>
+            <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+          </div>
         </div>
       </div>
       <div>
         <img style="width: 450px;height: 370px;" src="images/whychoose1.png" alt="">
       </div>
-      <div style="text-align: right;margin-top: 50px;">
+      <div style="text-align: right;margin-top: 50px;margin-left: 40px;">
+       <div style="display: flex;align-items: center;column-gap: 15px;">
         <div>
           <h2 class="text-2xl">Integrated Supplier</h2>
           <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
         </div>
         <div>
-          <h2 class="text-2xl">Sustainable Practice</h2>
-          <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+          <img src="images/fruit-logo.jpg" alt="">
         </div>
-        <div>
-          <h2 class="text-2xl">The Benefits Only</h2>
-          <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+       </div>
+        <div style="display: flex;align-items: center;column-gap: 15px;">
+          <div>
+            <h2 class="text-2xl">Sustainable Practice</h2>
+            <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+          </div>
+          <div>
+            <img src="images/ice-cream 1.svg" alt="">
+          </div>
+        </div>
+        <div style="display: flex;align-items: center;column-gap: 15px;">
+          <div>
+            <h2 class="text-2xl">The Benefits Only</h2>
+            <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+          </div>
+          <div>
+            <img src="images/like 1.jpg" alt="">
+          </div>
         </div>
       </div>
       </div>
     </section>
-
+    </main>
     <footer class="footer footer-center p-10 bg-base-content text-base-content rounded">
       <div class="flex items-center">
         <img src="images/logo.png" alt="">
